RESOLVED FIXED305451
[GTK][WPE][Coordinated Graphics] wheel event async scrolling doesn't work while the main thread is blocked
https://bugs.webkit.org/show_bug.cgi?id=305451
Summary [GTK][WPE][Coordinated Graphics] wheel event async scrolling doesn't work whi...
Fujii Hironori
Reported 2026-01-13 21:39:11 PST
[GTK][WPE][Coordinated Graphics] wheel event async scrolling doesn't work while the main thread is blocked 1. Load the content 2. Send wheel events to scroll 3. Sometimes, the page doesn't start scrolling promptly This content repeats blocking the main thread for 2 seconds, and waiting for 1 second. If the wheel event is dispatched while the main thread is blocked, the async scrolling doesn't start until the block ends.
Attachments
scrollblock.html (1.19 KB, text/html)
2026-01-14 00:19 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2026-01-13 22:35:53 PST
Fujii Hironori
Comment 2 2026-01-14 00:19:00 PST
Created attachment 478006 [details] scrollblock.html
EWS
Comment 3 2026-01-28 23:05:59 PST
Committed 306396@main (2f1345fa776a): <https://commits.webkit.org/306396@main> Reviewed commits have been landed. Closing PR #56544 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.