Cherry-pick 306396@main (2f1345fa776a). https://bugs.webkit.org/show_bug.cgi?id=305451

[GTK][WPE][Coordinated Graphics] wheel event async scrolling doesn't start while the main thread is blocked
    https://bugs.webkit.org/show_bug.cgi?id=305451

    Reviewed by Carlos Garcia Campos.

    The async scrolling animation is using DisplayRefreshMonitor class.
    WebDisplayRefreshMonitor class is the implementation of it for WebKit. It sends
    messages to UI process to monitor the display refresh. However,
    WebDisplayRefreshMonitor is the main thread specific class. Thus, while the
    main thread is blocked, it can't send a message.

    Moved ScrollingCoordinatorCoordinated from WebCore to WebKit. Changed it to
    send a message to UI process to start monitoring the display refresh. Added a
    new Messages::WebPageProxy::SetHasActiveAnimatedScrollsForAsyncScrolling.

    The main thread is still painting the scrollbar layers. The scrollbars aren't
    updated while the main thread is blocked. This is another problem tracked by
    bug#305561.

    * Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:
    * Source/WebCore/page/scrolling/ThreadedScrollingTree.h:
    * Source/WebCore/page/scrolling/coordinated/ScrollingTreeCoordinated.cpp:
    (WebCore::ScrollingTreeCoordinated::hasNodeWithAnimatedScrollChanged):
    * Source/WebCore/page/scrolling/coordinated/ScrollingTreeCoordinated.h:
    * Source/WebCore/platform/TextureMapper.cmake:
    * Source/WebKit/SourcesGTK.txt:
    * Source/WebKit/SourcesWPE.txt:
    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::setHasActiveAnimatedScrollsForAsyncScrolling):
    * Source/WebKit/UIProcess/WebPageProxy.h:
    * Source/WebKit/UIProcess/WebPageProxy.messages.in:
    * Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:
    (WebKit::WebChromeClient::createScrollingCoordinator const):
    * Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ScrollingCoordinatorCoordinated.cpp: Renamed from Source/WebCore/page/scrolling/coordinated/ScrollingCoordinatorCoordinated.cpp.
    (WebKit::ScrollingCoordinatorCoordinated::ScrollingCoordinatorCoordinated):
    (WebKit::ScrollingCoordinatorCoordinated::~ScrollingCoordinatorCoordinated):
    (WebKit::ScrollingCoordinatorCoordinated::pageDestroyed):
    (WebKit::ScrollingCoordinatorCoordinated::hasNodeWithAnimatedScrollChanged):
    (WebKit::ScrollingCoordinatorCoordinated::didCompletePlatformRenderingUpdate):
    * Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ScrollingCoordinatorCoordinated.h: Renamed from Source/WebCore/page/scrolling/coordinated/ScrollingCoordinatorCoordinated.h.

    Canonical link: https://commits.webkit.org/306396@main